# turing-challenge-assignment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
turing_challenge_assignment/: app.py
turing_challenge_assignment/modules/: chat.py  prompt.py  vectorstore.py
