[tool.poetry]
name = "turing-challenge-assignment"
version = "0.1.0"
description = "turing challenge assignment"
authors = ["Salvador Moreno Gutiérrez <smoreno94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain = "^0.1.12"
gradio = "^4.21.0"
openai = "^1.14.1"
langchain-openai = "^0.0.8"
chromadb = "^0.4.24"
langchain-community = "^0.0.28"
pypdf = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
